docs/v5.2.0/_sources/gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength_std.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength_std.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py:


InfiniteCylinder: Qsca vs wavelength std
========================================

.. GENERATED FROM PYTHON SOURCE LINES 6-37



.. image-sg:: /gallery/experiment/cylinder/images/sphx_glr_cylinder_Qsca_vs_wavelength_std_001.png
   :alt: cylinder Qsca vs wavelength std
   :srcset: /gallery/experiment/cylinder/images/sphx_glr_cylinder_Qsca_vs_wavelength_std_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [<matplotlib.lines.Line2D object at 0x7f1fdf618610>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7f1fdf618a50>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        InfiniteCylinderSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
    )


    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=np.linspace(200, 1800, 300) * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1] * ureg.watt,
        numerical_aperture=[0.2],
    )
    scatterer = InfiniteCylinderSet(
        diameter=np.linspace(400, 1400, 10) * ureg.nanometer,
        material=[1.4],
        medium=[1.0],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="source:wavelength", std="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.467 seconds)


.. _sphx_glr_download_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cylinder_Qsca_vs_wavelength_std.ipynb <cylinder_Qsca_vs_wavelength_std.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cylinder_Qsca_vs_wavelength_std.py <cylinder_Qsca_vs_wavelength_std.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cylinder_Qsca_vs_wavelength_std.zip <cylinder_Qsca_vs_wavelength_std.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
